jallib-?.?.?
------------

Changes since 0.9.0

device files:
 - based on MPLAB version 8.90
 - Fixed config bits of many baseline and midrange PICs.
   Unused bits read as '1' of most midrange PICs and as '0' for
   most baseline PICs (with many exceptions!).
 - Added constant ADC_MAX_RESOLUTION specifying the maximum ADC
   resolution (0,8,10,12).
 - Added aliases without '0' for ADRES0{H|L} registers.
 - Fixed accidentally suppressed ADCON2_CHSNx bitfields (14H core).
 - Un-enumerate ADCON2 fields TRIGSEL and CHSN (14H core).
 - Un-enumerate CMxCON1 fields CxPCH and CxNCH (14H core).
 - Un-enumerate CLKRCON fields CLKRDC and CLKRDIV (14H core).
 - Rename SLRCONx_SLRCONxy bits to SLRCONx_SLRxy (14H core).
 - Rename ODCONx_ODCONxy bits to ODCONx_ODxy (14H core).

externals:
 - Added library for AD9850 chip
 - Added library for LTC2942 chip

filesystems:
 -

jal:
 -

networking:
 -

peripherals:
 -

protocols:
 -

samples:
 - Added sample for use of DDS_AD9850 library


jallib-0.9.0
------------

Released 2013-02-17

Changes since 0.8.0

device files:
 - Revised allocation of _pic_accum and _pic_isr_w:
   * Most baseline and midrange need both.
   * Extended midrange and 18Fs need only _pic_accum.
   * _pic_accum for 18Fs moved to begin of access bank (0x00),
   * Rest of shared memory specified as unshared memory,
     and added to the (last) largest unshared memory block
     to allow the largest possible array or buffer.
 - Modified naming convention for USART and MSSP modules:
   First or only module uses unqualified names, second module
   uses '2' (suffix for USART, embedded for SSP registers).
   Needed some changes in I2C and SPI libraries.
 - Fixed missing aliases for extended midrange PICs for
   USART and SSP modules.
 - JANSEL_ANSxx bits now defined as alias of original bitfield
   in stead of replacing original MPLAB bitfields.
 - Added ADC_GROUPS 14 and 14_1
 - Corrected ADC_GROUP specification of some midrange PICs.