@@ -65,9 +65,9 @@
       <ul>
       <li><a href="#memdata">Data memory</a>
       <li><a href="#membanks">Memory banks</a>
+      <li><a href="#memshare">Shared memory</a>
       <li><a href="#highmem">INTOSC calibration</a>
       <li><a href="#memusb">Data memory of PICs with USB module</a>
-      <li><a href="#memshare">Shared memory</a>
       <li><a href="#analog">Analog modules</a>
       </ul>
    <li><a href="#compat">Compatibility and Miscellaneous Remarks</a>
@@ -1728,6 +1728,70 @@ banks of data memory.
 Only few PICs have more than 4 banks (example: 16f59)!
 
 
+<h3><a name="memshare">Shared Memory</a></h3>
+<p>The compiler recognises another pragma for data memory:
+<b>pragma shared</b>.
+
+<p>For the compiler 'shared' means:
+<ul compact>
+<li>For baseline and midrange PICs: the part of data memory which is
+accessible in all banks regardless the settings of the bank selection bits
+(STATUS_RPx, or similar bits in FSR).
+Note: Memory which is mirrored in other bank(s), but not in all banks,
+is in this context not shared memory!
+<li>For the extended midrange and 18F PICs: GPR-memory in the access bank.
+</ul>
+
+<p><b>Specific variables used by the compiler</b> must be allocated in
+shared memory:
+<dl>
+<dt><b>_pic_isr_w</b>
+<dd>A byte variable used for saving the W register with interrupts.
+<br>This variable is only needed for baseline and midrange PICs
+(core 12 and 14).
+<br><i>It is not required for PICs without interrupt support (like 10f20x),
+but the current device files still declare it for these PICs.
+However unused variables are removed by the compiler!</i>
+<dt><b>_pic_accum</b>
+<dd>A byte variable used for saving the W register with multi-byte additions
+and subtractions when the two involved variables are in different memory banks,
+and for sign extensions of signed variables (adding sbyte to sword, etc.).
+</dl>
+<p>For performance reasons some other variables are preferrably allocated in
+shared memory.
+The device files do this for the following variables:
+<dl>
+<dt><b>Shadowing bytes</b>
+<dd>Bytes for port and other register shadowing
+(baseline and midrange PICs only, and when enough shared memory available!).
+</dl>
+
+<p>With most PICs only part of data memory shared.
+Some midrange PICs have all data memory memory shared,
+some others have no shared memory.
+There is no problem with 'all shared memory', but with 'no shared memory'
+the memory for the compiler required variables is declared as 'shared' even
+though it is in fact unshared memory!
+In this case the locations with the same (7-bits) offset in other banks are
+reserved (excluded from 'pragma data').
+However this is only partly a solution.
+It avoids problems with interrupt handlers (which use _pic_isr_w),
+but it does not completely avoid problems with calculations with multi-byte
+variables (word, dword, etc., which use _pic_accum) when the variables
+are in different banks.
+<br>Examples: <b>16F73 and 16F74. With these PICs it is not safe for
+programs to perform calculations with multi-byte variables!</b>.
+
+<p>Although you can declare a variable with 'shared',
+the compiler won't allocate the variable automatically in shared memory!
+You need to explicitly assigning it an address with 'at &lt;address&gt;',
+whereby &lt;address&gt; must be in the shared memory region.
+Remember that device files allocate some variables in shared memory!
+Do not specify an addresses already reserved for another variable!
+<br>By using this feature you take over part of memory management of the
+compiler, which is of course your own responsibility!
+
+
 <h3><a name="highmem">INTOSC calibration</a></h3>
 <p>Baseline and some midrange PICs have in the last word of code memory
 an instruction for calibration of the internal oscillator.
@@ -1744,63 +1808,6 @@ and sometimes it can be shared between USB module and user program.
 So the amount of available data memory as specified in the device file
 can be smaller than the total amount of memory specified in the
 datasheet due to reservation by the USB module.
-
-
-<h3><a name="memshare">Shared Memory</a></h3>
-<p>The compiler recognises another pragma for data memory:
-<b>pragma shared</b>.
-
-<p>For the compiler 'shared' means:
-<ul compact>
-<li>For baseline and midrange PICs: the part of data memory which is
-accessible in all banks regardless the settings of the bank selection bits
-(STATUS_RPx, or similar bits in FSR).
-Note: Memory which is mirrored in other bank(s), but not in all banks,
-is in this context not shared memory!
-<li>For the extended midrange and 18F PICs: GPR-memory in the access bank.
-</ul>
-
-<p>Shared memory is used <b>for specific variables used by the compiler</b>:
-<dl>
-<dt><b>_pic_isr_w</b>
-<dd>A byte variable used for saving the W register with interrupts.
-<br>This variable is only needed for baseline and midrange PICs
-(core 12 and 14).
-<br><i>It is not required for PICs without interrupt support (like 10f20x),
-but the current device files still declare it for these PICs.
-However unused variables are removed by the compiler!</i>
-<dt><b>_pic_accum</b>
-<dd>A byte variable used for saving the W register with multi-byte additions
-and subtractions when the two involved variables are in different memory banks,
-and for sign extensions of signed variables (adding sbyte to sword, etc.).
-<dt><b>Shadowing bytes</b>
-<dd>Bytes for port and other register shadowing
-(baseline and midrange PICs only, and when enough shared memory available!).
-</dl>
-
-<p>Shared memory can be used for other variables as well
-by explicitly assigning it an address with 'at &lt;address&gt;',
-whereby &lt;address&gt; must be in the shared memory region.
-Remember that device files allocate shared memory!
-Do not allocate the same addresses as already assigned by te device file.
-<br>By using this feature you take over part of memory management of the
-compiler at your own risk!
-
-<p>With most PICs only part of data memory shared.
-Some midrange PICs have all data memory memory shared,
-some others have no shared memory.
-There is no problem with 'all shared memory', but with 'no shared memory'
-the memory for the compiler required variables is declared as 'shared' even
-though it is in fact unshared memory!
-In this case the locations with the same (7-bits) offset in other banks are
-reserved (excluded from the available data memory for user variables).
-However this is only partly a solution.
-It avoids problems with interrupt handlers (which use _pic_isr_w),
-but it does not completely avoid problems with calculations with multi-byte
-variables (word, dword, etc., which use _pic_accum) when the variables
-are in different banks.
-<br>Examples: <b>16F73 and 16F74. With these PICs it is not safe for
-programs to perform calculations with multi-byte variables!</b>.
 
 
 <h3><a name="analog">Analog modules</a></h3>
